--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "webpack.config.js",
   "scripts": {
     "build": "webpack --mode=production",
-    "test": "webpack",
+    "test-build-js": "webpack",
+    "test-build-css": "gulp test",
     "serve-js": "webpack serve",
     "serve-css": "gulp watch"
   },
@@ -19,6 +20,7 @@
     "@babel/plugin-syntax-jsx": "^7.22.5",
     "@babel/plugin-transform-react-display-name": "^7.22.5",
     "@babel/plugin-transform-react-jsx": "^7.22.5",
+    "axios": "^1.4.0",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
     "del": "^6.1.1",
@@ -26,6 +28,7 @@
     "gulp-autoprefixer": "^8.0.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-inject": "^5.0.5",
+    "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "html-webpack-plugin": "^5.5.3",
