--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mini-css-extract-plugin": "^2.7.6",
     "mobx": "^6.9.1",
     "mobx-react": "^9.0.0",
+    "next": "^13.4.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
